Solved issues where images border-radius was not displaying right on safari

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -37,10 +37,14 @@
   top: 0;
   left: 0;
 }
+.imgContainer {
+  border: solid 1px #0784b5;
+  border-radius: 10px;
+  /* -webkit-border-radius: 10px;
+  overflow: hidden; */
+}
 .img {
   position: relative;
-  border-radius: 10px;
-  border: solid 1px #0784b5 !important;
   top: 0;
   left: 0;
 }
