--- a/src/styles/projects.module.css
+++ b/src/styles/projects.module.css
@@ -26,8 +26,8 @@
 .uicard {
   margin-top: 30px;
   margin-bottom: 30px;
+  border: 1px solid #0784b5;
   border-radius: 10px;
-  border: 1px solid #0784b5 !important;
   height: 600px;
   width: 350px;
   position: relative;
@@ -35,6 +35,9 @@
   transition: all 0.3s ease-out;
   background: radial-gradient(#111 50%, #000 100%);
 }
+/* [data-gatsby-image-wrapper] {
+  overflow: hidden;
+} */
 .uicard .description {
   position: absolute;
   bottom: 0;
@@ -78,14 +81,18 @@
   .uicard {
     margin-top: 30px;
     margin-bottom: 30px;
+    border-style: none;
     border: 1px solid #0784b5;
+    border-radius: 10px !important;
     height: 500px;
     width: 350px;
     position: relative;
     overflow: hidden;
     transition: all 0.3s ease-out;
     background: radial-gradient(#111 50%, #000 100%);
+    z-index: 1;
   }
+
   .image {
     transform: scale(1);
     transition: all 0.3s ease-out;
